@@ -27,13 +27,13 @@
 /*
 * class DOMEntity extends DOMNode
 *
-* URL: https://www.w3.org/TR/2003/WD-DOM-Level-3-Core-20030226/DOM3-Core.html#ID-527DCFF2
+* URL: https://www.w3.org/TR/2003/WD-DOM-Level-3-Core-20030226/DOM3-Core.html#core-ID-527DCFF2
 * Since:
 */
 
 /* {{{ publicId	string
 readonly=yes
-URL: http://www.w3.org/TR/2003/WD-DOM-Level-3-Core-20030226/DOM3-Core.html#ID-D7303025
+URL: https://www.w3.org/TR/2003/WD-DOM-Level-3-Core-20030226/DOM3-Core.html#core-ID-D7303025
 Since:
 */
 int dom_entity_public_id_read(dom_object *obj, zval *retval)
@@ -45,7 +45,7 @@ int dom_entity_public_id_read(dom_object *obj, zval *retval)
 		return FAILURE;
 	}
 
-	if (nodep->etype != XML_EXTERNAL_GENERAL_UNPARSED_ENTITY) {
+	if (nodep->etype != XML_EXTERNAL_GENERAL_UNPARSED_ENTITY || !nodep->ExternalID) {
 		ZVAL_NULL(retval);
 	} else {
 		ZVAL_STRING(retval, (char *) (nodep->ExternalID));
@@ -58,7 +58,7 @@ int dom_entity_public_id_read(dom_object *obj, zval *retval)
 
 /* {{{ systemId	string
 readonly=yes
-URL: http://www.w3.org/TR/2003/WD-DOM-Level-3-Core-20030226/DOM3-Core.html#ID-D7C29F3E
+URL: https://www.w3.org/TR/2003/WD-DOM-Level-3-Core-20030226/DOM3-Core.html#core-ID-D7C29F3E
 Since:
 */
 int dom_entity_system_id_read(dom_object *obj, zval *retval)
@@ -83,13 +83,12 @@ int dom_entity_system_id_read(dom_object *obj, zval *retval)
 
 /* {{{ notationName	string
 readonly=yes
-URL: http://www.w3.org/TR/2003/WD-DOM-Level-3-Core-20030226/DOM3-Core.html#ID-6ABAEB38
+URL: https://www.w3.org/TR/2003/WD-DOM-Level-3-Core-20030226/DOM3-Core.html#core-ID-6ABAEB38
 Since:
 */
 int dom_entity_notation_name_read(dom_object *obj, zval *retval)
 {
 	xmlEntity *nodep = (xmlEntity *) dom_object_get_node(obj);
-	char *content;
 
 	if (nodep == NULL) {
 		php_dom_throw_error(INVALID_STATE_ERR, 1);
@@ -99,9 +98,12 @@ int dom_entity_notation_name_read(dom_object *obj, zval *retval)
 	if (nodep->etype != XML_EXTERNAL_GENERAL_UNPARSED_ENTITY) {
 		ZVAL_NULL(retval);
 	} else {
-		content = (char *) xmlNodeGetContent((xmlNodePtr) nodep);
-		ZVAL_STRING(retval, content);
-		xmlFree(content);
+		/* According to spec, NULL is only allowed for unparsed entities, if it's not set we should use the empty string. */
+		if (!nodep->content) {
+			ZVAL_EMPTY_STRING(retval);
+		} else {
+			ZVAL_STRING(retval, (const char *) nodep->content);
+		}
 	}
 
 	return SUCCESS;
